--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,28 @@
 
 
         <form>
-            <div class="item dropDowns container row shadow-sm p-3 mb-5 bg-body rounded">
-                <div class="contents">
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">Nombre del informante clave</label>
-                        <input type="text" class="form-control" id="formNombreInformante" placeholder="Introduzca el nombre"
-                            required />
-                    </div>
+            <div class="item simpleTextInput container">
+                <div class="contents row">
+
+                    <div class="contents-data">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                      </div>
+
+                </div>
+            </div>
+
+            <div class="item simpleTextInput container">
+                <div class="contents row">
+
+                    <div class="contents-data">
+                  
+                            <label for="formGroupExampleInput2">Nombre del informante clave</label>
+                            <input type="text" class="form-control" id="formNombreInformante" placeholder="Introduzca el nombre"
+                                required />
+                      
+                      </div>
 
                 </div>
             </div>
