--- a/src/index.html
+++ b/src/index.html
@@ -211,6 +211,12 @@
                     <button type="button" class="btn btn-secondary" id="btnGuardarForm"
                         style="margin-top: 30px; margin-left: 500px;">Guardar</button>
                 </div>
+                <div>
+                    <button type="button" class="btn btn-secondary" id="btnGuardarForm"  onclick="location.href = 'src/events.html';"
+                        style="margin-top: 30px; margin-left: 500px;">Agregar Evento</button>
+                </div>
+
+               
             </div>
 
         </form>
