FIX PAGINA MARIA

--- a/src/events.html
+++ b/src/events.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body id="start" class="home">
+<body id="start" class="events">
 
     <div class="container-fluid">
         <header class="row py-4 border-bottom header">
@@ -21,7 +21,7 @@
         </header>
     </div>
     <h1 class="text-center" style="margin-top: 30px; margin-bottom: 30px;">
-        Ficha de Registro TCU-374/486 Patrimonio y Cultura
+        TEEEST
     </h1>
 
     <div class="container">
@@ -235,10 +235,6 @@
 
 
 </body>
-<script>
-    function pageRedirect() {
-        window.location.href = "/src/events.html";
-    }      
-</script>
+
 
 </html>
