--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@
                         style="margin-top: 30px; margin-left: 500px;">Guardar</button>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-secondary" id="btnGuardarForm"  onclick="location.href = 'src/events.html';"
+                    <button type="button" class="btn btn-secondary" id="btnGuardarForm"  onclick="location.href = 'events.html';"
                         style="margin-top: 30px; margin-left: 500px;">Agregar Evento</button>
                 </div>
 
