--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                 <div class="col-2">
 
                     <div class="dropdown">
-                        <button onclick="myFunction()" class="dropbtn" ><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAAAXNSR0IArs4c6QAAAH9JREFUWEft1UsKgDAMANH05npypTsXtYOGQAvTbaikLx9bLHbaYvmECVFFFFKIBCi+VQ9d9JpkfIgxEzKhLr5VDyVb5N91hchtJnREROWknaPkHPuHyufF2EtWeYbfd8qIXKGMUOUOev2Puocye4jKXRJ3yohVIYVIgOL2EAndFg4LJcntgd8AAAAASUVORK5CYII="/></button>
+                        <button onclick="myFunction()" class="dropbtn" ></button>
                         <div id="myDropdown" class="dropdown-content">
                           <a href="">Ver eventos</a>
                           <a href="events.html">Agregar evento</a>
